# cave_registry

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVLOG.md  GEMINI.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/caves/: admin.py  models.py  serializers.py  urls.py  views.py
backend/caves/management/commands/: import_caves.py
backend/caves/migrations/: 0001_initial.py
backend/caves/tests/: test_api.py  test_commands.py  test_media.py
backend/config/: settings.py  urls.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  caves.ts
frontend/src/components/: GeologyLegend.tsx  MapFilters.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: CaveDetail.tsx  CaveForm.tsx  CaveList.tsx  CaveMap.tsx  Dashboard.tsx  Landing.tsx  Login.tsx
frontend/src/utils/: leafletIconFix.ts
specs/: cave_registry_plan.md
